@@ -202,6 +202,7 @@ machine_select_machine( fuse_machine_info *machine )
 {
   int width, height;
   int capabilities;
+  int plus3, trdos;
 
   machine_current = machine;
 
@@ -232,9 +233,11 @@ machine_select_machine( fuse_machine_info *machine )
 
   if( machine_reset() ) return 1;
 
-  /* Activate appropriate menu items and update the status bar */
-  if( ( capabilities & LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_DISK ) ||
-      ( capabilities & LIBSPECTRUM_MACHINE_CAPABILITY_TRDOS_DISK )    ) {
+  /* Set the disk menu items and statusbar appropriately */
+  plus3 = capabilities & LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_DISK;
+  trdos = capabilities & LIBSPECTRUM_MACHINE_CAPABILITY_TRDOS_DISK;
+
+  if( plus3 || trdos ) {
     ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK, 1 );
     ui_statusbar_update( UI_STATUSBAR_ITEM_DISK, UI_STATUSBAR_STATE_INACTIVE );
   } else {
@@ -243,6 +246,10 @@ machine_select_machine( fuse_machine_info *machine )
 			 UI_STATUSBAR_STATE_NOT_AVAILABLE );
   }
 
+  ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_PLUS3, plus3 );
+  ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_TRDOS, trdos );
+    
+  /* And the dock menu item */
   if( capabilities & LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_DOCK ) {
     ui_menu_activate( UI_MENU_ITEM_MEDIA_CARTRIDGE_DOCK_EJECT, 0 );
   }
