@@ -125,8 +125,12 @@ typedef enum ui_menu_item {
   UI_MENU_ITEM_MEDIA_CARTRIDGE_IF2,
   UI_MENU_ITEM_MEDIA_CARTRIDGE_IF2_EJECT,
   UI_MENU_ITEM_MEDIA_DISK,
-  UI_MENU_ITEM_MEDIA_DISK_A_EJECT,
-  UI_MENU_ITEM_MEDIA_DISK_B_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_PLUS3,
+  UI_MENU_ITEM_MEDIA_DISK_PLUS3_A_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_PLUS3_B_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_TRDOS,
+  UI_MENU_ITEM_MEDIA_DISK_TRDOS_A_EJECT,
+  UI_MENU_ITEM_MEDIA_DISK_TRDOS_B_EJECT,
   UI_MENU_ITEM_MEDIA_IDE,
   UI_MENU_ITEM_MEDIA_IDE_SIMPLE8BIT,
   UI_MENU_ITEM_MEDIA_IDE_SIMPLE8BIT_MASTER_EJECT,
